--- a/KDE Tweaks/libinput config/libinput-gestures.conf
+++ b/KDE Tweaks/libinput config/libinput-gestures.conf
@@ -22,7 +22,7 @@
 # dimensional desktop as follows
     gesture swipe up	3 xdotool key ctrl+F9
     gesture swipe down	3 xdotool key ctrl+F8
-    gesture swipe left_down	3 xdotool key alt+right
+    gesture swipe left_down	3 xdotool key alt+Right
     gesture swipe right_up	 3 xdotool key alt+Left
     
     gesture swipe up	4 xdotool key ctrl+alt+Down
